<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background = "@drawable/crop_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/bordermine"
        android:text="@string/welcome_text"/>
    <TextView
        android:id="@+id/start_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="24dp"
        android:textSize="15sp"
        android:text="@string/start_text"/>

    <Button
        android:id="@+id/easy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:text="@string/easy_button"/>
    <Button
        android:id="@+id/medium_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:text="@string/medium_button"/>
    <Button
        android:id="@+id/hard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:text="@string/hard_button"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/about_option"
            android:layout_centerInParent="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/blue"/>
    </RelativeLayout>


</RelativeLayout>

